// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Packages should compile index for a single package: (Output File Strategy "members") (Option Group "1") 1`] = `
"**@scope/package-1 v1.0.0** • [**Docs**](packages.md)

***

# PACKAGE 1 README

Readme content
"
`;

exports[`Packages should compile index page for packages: (Output File Strategy "members") (Option Group "1") 1`] = `
"[**packages-example**](index.md) • **Docs**

***

# packages-example

## Packages

- [@scope/package-1 - v1.0.0](@scope/package-1/index.md)
- [package-1b](package-1b/index.md)
- [package-2 - v1.0.0](package-2/index.md)
- [@scope/package-3](@scope/package-3/index.md)
- [package-4](package-4/index.md)
- [package-5](package-5/package-5.md)
- [package-6](package-6.md)
- [package-7](package-7/index.md)
"
`;

exports[`Packages should compile index page for packages: (Output File Strategy "members") (Option Group "1") 2`] = `
"[**@scope/package-1 v1.0.0**](index.md) • **Docs**

***

[packages-example](../../packages.md) / @scope/package-1

# @scope/package-1

Comments for package-1

Some more comments for package-1

## Interfaces

- [PackageInterface](interfaces/PackageInterface.md)
"
`;

exports[`Packages should compile index page for packages: (Output File Strategy "members") (Option Group "1") 3`] = `
"[**package-2 v1.0.0**](index.md) • **Docs**

***

[packages-example](../packages.md) / package-2

# package-2

## Modules

- [module-1](module-1/index.md)
- [module-2](module-2/index.md)
"
`;

exports[`Packages should compile member for relative entry module package: (Output File Strategy "members") (Option Group "1") 1`] = `
"**package-6** • **Docs**

***

[packages-example](../../../packages.md) / [package-6](../../../package-6.md) / [module1](../../../package-6.md) / PackageInterface1

# Interface: PackageInterface1
"
`;

exports[`Packages should compile member page for a single package: (Output File Strategy "members") (Option Group "1") 1`] = `
"[**@scope/package-1 v1.0.0**](../README.md) • **Docs**

***

[@scope/package-1 v1.0.0](../packages.md) / PackageInterface

# Interface: PackageInterface

## Properties

### prop

> **prop**: \`string\`
"
`;

exports[`Packages should compile member page for packages: (Output File Strategy "members") (Option Group "1") 1`] = `
"[**@scope/package-1 v1.0.0**](../index.md) • **Docs**

***

[packages-example](../../../packages.md) / [@scope/package-1](../index.md) / PackageInterface

# Interface: PackageInterface

## Properties

### prop

> **prop**: \`string\`
"
`;

exports[`Packages should compile member page for packages: (Output File Strategy "members") (Option Group "2") 1`] = `
"[**@scope/package-1 v1.0.0**](../../@scope/package-1/README.md) • **Docs**

***

[packages-example v0.0](../../README.md) / [@scope/package-1](../README.md) / PackageInterface

# Interface: PackageInterface

## Properties

### prop

> **prop**: \`string\`
"
`;

exports[`Packages should compile readmes for a packages: (Output File Strategy "members") (Option Group "1") 1`] = `
"**packages-example** • [**Docs**](packages.md)

***

# MY README

> Some block quote

Some text.

## Readme heading

Some text.
"
`;

exports[`Packages should compile readmes for a packages: (Output File Strategy "members") (Option Group "1") 2`] = `
"**@scope/package-1 v1.0.0** • [**Docs**](globals.md)

***

[packages-example](../../packages.md) / @scope/package-1

# PACKAGE 1 README

Readme content
"
`;

exports[`Packages should compile readmes for a packages: (Output File Strategy "members") (Option Group "2") 1`] = `
"**packages-example v0.0** • **Docs**

***

# MY README

> Some block quote

Some text.

## Readme heading

Some text.

## Packages

| Name | Version | Description |
| :------ | :------ | :------ |
| [@scope/package-1](package-1/README.md) | 1.0.0 | Description for package-1 |
| [package-1b](package-1b/README.md) | - | - |
| [package-2](package-2/README.md) | 1.0.0 | - |
| [@scope/package-3](package-3/README.md) | - | Description for package 3 |
| [package-4](package-4/README.md) | - | - |
| [package-5](package-5/package-5.md) | - | - |
| [package-6](package-6.md) | - | - |
| [package-7](package-7/README.md) | - | - |
"
`;

exports[`Packages should compile relative entry module package: (Output File Strategy "members") (Option Group "1") 1`] = `
"**package-6** • **Docs**

***

[packages-example](packages.md) / [package-6](package-6.md) / module1

# module1

## Index

### Interfaces

- [PackageInterface1](package-6/module1/interfaces/PackageInterface1.md)
"
`;
